# rusoto

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  AWS-CREDENTIALS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINER_GUIDELINES.md  Makefile  README.md  RELEASING.md  aliases.js  appveyor.yml  azure-pipelines.yml  build-sequentially.sh  build.rs  buildspec.yml  clippy.toml  dark.css  docgen.sh  index.html  light.css  main.js  rustdoc.css  rustfmt.toml  s3-sample-creds  settings.html  source-files.js  source-script.js
codegen/: CODEGEN.md  Cargo.toml  QueueService.wsdl  README.md  autoscaling.rs  autoscaling.rs.html  botocore_parser.py  botocore_parser_s3.py  build.rs  cloudformation.rs  cloudformation.rs.html  dynamodb.rs  dynamodb_botoparser.py  iam.rs  iam.rs.html  jsonprotocol.py  kms.rs  news3.rs  parserbase.py  queryprotocol.py  s3-codegen.sh  s3.json  s3.rs  sns.rs  sns.rs.html  sqs.rs  sqs.rs.html
codegen/dynamodb/: dynamodb.json  dynamodb.rs  dynamodb_botoparser.py
codegen/src/: botocore.in.rs  botocore.rs  lib.rs  serialization.rs  util.rs
codegen/src/generator/: cwquery.rs  ec2.rs  error_types.rs  json.rs  mod.rs  query.rs  query_request_serializer.rs  rest_json.rs  rest_response_parser.rs  rest_xml.rs  tests.rs  type_filter.rs  utils.rs  xml_payload_parser.rs  xml_response_parser.rs
credential/: Cargo.toml  README.md
credential/src/: claims.rs  container.rs  environment.rs  iam.rs  instance_metadata.rs  lib.rs  profile.rs  static_provider.rs
credential/tests/sample-data/: iam_task_credentials_sample_response
docs/: Cargo.toml  build.rs
docs/src/: lib.rs
examples/s3/: Cargo.toml
examples/s3/src/: main.rs
helpers/: Cargo.toml  README.md
helpers/src/: dynamodb.rs  kms.rs  lib.rs  logs.rs  sqs.rs
helpers/tests/: dynamodb.rs  s3.rs  sqs.rs
integration_tests/: Cargo.toml  README.md  docker_test_run.py
integration_tests/scripts/: run_ceph_tests.sh  run_minio_tests.sh
integration_tests/tests/: acm.rs  acmpca.rs  alexaforbusiness.rs  amplify.rs  apigateway.rs  apigatewaymanagementapi.rs  apigatewayv2.rs  application-autocaling.rs  appmesh.rs  appstream.rs  appsync.rs  athena.rs  autoscaling-plans.rs  autoscaling.rs  batch.rs  budgets.rs  chime.rs  cloud9.rs  clouddirectory.rs  cloudformation.rs  cloudfront.rs  cloudhsm.rs  cloudhsmv2.rs  cloudsearch.rs  cloudtrail.rs  cloudwatch.rs  codebuild.rs  codecommit.rs  codedeploy-commands.rs  codedeploy.rs  codepipeline.rs  codestar.rs  cognito-idp.rs  cognito-sync.rs  cognitoidentity.rs  comprehend.rs  comprehendmedical.rs  config.rs  core.rs  cur.rs  (+99 more)
integration_tests/tests/sample-data/: multiple_profile_credentials  s3_temp_redirect.xml
mock/: Cargo.toml
mock/src/: lib.rs
rusoto/: Cargo.toml  index.html
rusoto/core/: Cargo.toml  LICENSE  README.md  build.rs
rusoto/core/src/: client.rs  client_inner.rs  compression.rs  encoding.rs  error.rs  event_stream.rs  future.rs  lib.rs  pagination.rs  param.rs  reactor.rs  region.rs  request.rs  serialization.rs  signature.rs  stream.rs  v2.rs  xmlerror.rs  xmlutil.rs
rusoto/credential/: Cargo.toml  README.md
rusoto/credential/src/: claims.rs  container.rs  environment.rs  instance_metadata.rs  lib.rs  object_safe.rs  profile.rs  request.rs  secrets.rs  static_provider.rs  test_utils.rs  variable.rs
rusoto/credential/tests/: instance-profile-test.rs
rusoto/credential_service_mock/: Cargo.toml  run-and-test.sh
rusoto/credential_service_mock/src/: main.rs
rusoto/mock/: Cargo.toml
rusoto/services/: .gitignore  publish-services.sh  rustls-unit-test-no-doctests.sh  rustls-unit-test.sh  test-features.sh  test-select-features.sh
rusoto/services/accessanalyzer/: Cargo.toml  README.md
rusoto/services/acm/: Cargo.toml  README.md
rusoto/services/acm-pca/: Cargo.toml  README.md
rusoto/services/alexaforbusiness/: Cargo.toml  README.md
rusoto/services/amplify/: Cargo.toml  README.md
rusoto/services/apigateway/: Cargo.toml  README.md
rusoto/services/apigatewaymanagementapi/: Cargo.toml  README.md
rusoto/services/apigatewayv2/: Cargo.toml  README.md
rusoto/services/appconfig/: Cargo.toml  README.md
rusoto/services/application-autoscaling/: Cargo.toml  README.md
rusoto/services/application-insights/: Cargo.toml  README.md
rusoto/services/appmesh/: Cargo.toml  README.md
rusoto/services/appstream/: Cargo.toml  README.md
rusoto/services/appsync/: Cargo.toml  README.md
rusoto/services/athena/: Cargo.toml  README.md
rusoto/services/autoscaling/: Cargo.toml  README.md
rusoto/services/autoscaling-plans/: Cargo.toml  README.md
rusoto/services/backup/: Cargo.toml  README.md
rusoto/services/batch/: Cargo.toml  README.md
rusoto/services/budgets/: Cargo.toml  README.md
rusoto/services/ce/: Cargo.toml  README.md
rusoto/services/chime/: Cargo.toml  README.md
rusoto/services/cloud9/: Cargo.toml  README.md
rusoto/services/clouddirectory/: Cargo.toml  README.md
rusoto/services/cloudformation/: Cargo.toml  README.md
rusoto/services/cloudfront/: Cargo.toml  README.md
rusoto/services/cloudhsm/: Cargo.toml  README.md
rusoto/services/cloudhsmv2/: Cargo.toml  README.md
rusoto/services/cloudsearch/: Cargo.toml  README.md
rusoto/services/cloudsearchdomain/: Cargo.toml  README.md
rusoto/services/cloudtrail/: Cargo.toml  README.md
rusoto/services/cloudwatch/: Cargo.toml  README.md
rusoto/services/codebuild/: Cargo.toml  README.md
rusoto/services/codecommit/: Cargo.toml  README.md
rusoto/services/codedeploy/: Cargo.toml  README.md
rusoto/services/codedeploy-commands/: Cargo.toml  README.md
rusoto/services/config/: README.md  (+1 more)
rusoto/signature/: Cargo.toml  README.md
service_crategen/: Cargo.toml  README.md  services.json
service_crategen/codegen/: Cargo.toml
service_crategen/src/: botocore.rs  cargo.rs  config.rs  doco.rs  jmespath.rs  main.rs  service.rs  util.rs
services/s3/: Cargo.toml  build.rs
signature/: Cargo.toml  LICENSE  README.md
signature/src/: lib.rs  param.rs  region.rs
skeptical/: Cargo.toml  README.md  build.rs
skeptical/src/: lib.rs  main.rs
(+31402 files in other folders)
