[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

description = "AWS SDK for Rust"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
exclude = [".gitignore", ".travis.yml", "docgen.sh", "helpers/**/*", "codegen/**/*"]
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.24.2"

[badges]
maintenance = {status = "deprecated"}

[build-dependencies]
rustc_version = "0.1.7"
rayon = "0.6.0"
