[workspace]
members = [
    "mock",
    "rusoto/credential_service_mock",
    "rusoto/core",
    "rusoto/credential",
    "rusoto/signature",
    "rusoto/services/acm",
    "rusoto/services/acm-pca",
    "rusoto/services/alexaforbusiness",
    "rusoto/services/amplify",
    "rusoto/services/apigateway",
    "rusoto/services/apigatewaymanagementapi",
    "rusoto/services/apigatewayv2",
    "rusoto/services/application-autoscaling",
    "rusoto/services/appmesh",
    "rusoto/services/appstream",
    "rusoto/services/appsync",
    "rusoto/services/athena",
    "rusoto/services/autoscaling",
    "rusoto/services/autoscaling-plans",
    "rusoto/services/batch",
    "rusoto/services/budgets",
    "rusoto/services/ce",
    "rusoto/services/chime",
    "rusoto/services/cloud9",
    "rusoto/services/clouddirectory",
    "rusoto/services/cloudformation",
    "rusoto/services/cloudfront",
    "rusoto/services/cloudhsm",
    "rusoto/services/cloudhsmv2",
    "rusoto/services/cloudsearch",
    "rusoto/services/cloudsearchdomain",
    "rusoto/services/cloudtrail",
    "rusoto/services/cloudwatch",
    "rusoto/services/codebuild",
    "rusoto/services/codecommit",
    "rusoto/services/codedeploy",
    "rusoto/services/codepipeline",
    "rusoto/services/codestar",
    "rusoto/services/cognito-identity",
    "rusoto/services/cognito-idp",
    "rusoto/services/cognito-sync",
    "rusoto/services/comprehend",
    "rusoto/services/comprehendmedical",
    "rusoto/services/config",
    "rusoto/services/connect",
    "rusoto/services/cur",
    "rusoto/services/datapipeline",
    "rusoto/services/dax",
    "rusoto/services/devicefarm",
    "rusoto/services/directconnect",
    "rusoto/services/discovery",
    "rusoto/services/dms",
    "rusoto/services/docdb",
    "rusoto/services/ds",
    "rusoto/services/dynamodb",
    "rusoto/services/dynamodbstreams",
    "rusoto/services/ec2",
    "rusoto/services/ec2-instance-connect",
    "rusoto/services/ecr",
    "rusoto/services/ecs",
    "rusoto/services/elasticache",
    "rusoto/services/elasticbeanstalk",
    "rusoto/services/efs",
    "rusoto/services/eks",
    "rusoto/services/elastictranscoder",
    "rusoto/services/elb",
    "rusoto/services/elbv2",
    "rusoto/services/emr",
    "rusoto/services/events",
    "rusoto/services/firehose",
    "rusoto/services/fms",
    "rusoto/services/fsx",
    "rusoto/services/gamelift",
    "rusoto/services/glacier",
    "rusoto/services/glue",
    "rusoto/services/greengrass",
    "rusoto/services/guardduty",
    "rusoto/services/health",
    "rusoto/services/iam",
    "rusoto/services/importexport",
    "rusoto/services/inspector",
    "rusoto/services/iot",
    "rusoto/services/iotanalytics",
    "rusoto/services/iotsecuretunneling",
    "rusoto/services/iot-data",
    "rusoto/services/iot-jobs-data",
    "rusoto/services/iot1click-devices",
    "rusoto/services/iot1click-projects",
    "rusoto/services/kafka",
    "rusoto/services/kinesis",
    "rusoto/services/kinesisanalytics",
    "rusoto/services/kinesisvideo",
    "rusoto/services/kinesis-video-media",
    "rusoto/services/kinesis-video-archived-media",
    "rusoto/services/kms",
    "rusoto/services/lambda",
    "rusoto/services/lex-models",
    "rusoto/services/lex-runtime",
    "rusoto/services/license-manager",
    "rusoto/services/lightsail",
    "rusoto/services/logs",
    "rusoto/services/neptune",
    "rusoto/services/machinelearning",
    "rusoto/services/macie",
    "rusoto/services/marketplacecommerceanalytics",
    "rusoto/services/marketplace-entitlement",
    "rusoto/services/mediaconvert",
    "rusoto/services/medialive",
    "rusoto/services/mediapackage",
    "rusoto/services/mediastore",
    "rusoto/services/mediatailor",
    "rusoto/services/meteringmarketplace",
    "rusoto/services/mgh",
    "rusoto/services/mobile",
    "rusoto/services/mq",
    "rusoto/services/mturk",
    "rusoto/services/opsworks",
    "rusoto/services/opsworkscm",
    "rusoto/services/organizations",
    "rusoto/services/pi",
    "rusoto/services/polly",
    "rusoto/services/pricing",
    "rusoto/services/qldb",
    "rusoto/services/qldb-session",
    "rusoto/services/ram",
    "rusoto/services/rds",
    "rusoto/services/rds-data",
    "rusoto/services/redshift",
    "rusoto/services/rekognition",
    "rusoto/services/resource-groups",
    "rusoto/services/resourcegroupstaggingapi",
    "rusoto/services/route53",
    "rusoto/services/route53domains",
    "rusoto/services/s3",
    "rusoto/services/sagemaker",
    "rusoto/services/sagemaker-runtime",
    "rusoto/services/sdb",
    "rusoto/services/secretsmanager",
    "rusoto/services/securityhub",
    "rusoto/services/serverlessrepo",
    "rusoto/services/servicecatalog",
    "rusoto/services/servicediscovery",
    "rusoto/services/ses",
    "rusoto/services/shield",
    "rusoto/services/sms",
    "rusoto/services/snowball",
    "rusoto/services/sns",
    "rusoto/services/sqs",
    "rusoto/services/ssm",
    "rusoto/services/stepfunctions",
    "rusoto/services/storagegateway",
    "rusoto/services/sts",
    "rusoto/services/support",
    "rusoto/services/swf",
    "rusoto/services/textract",
    "rusoto/services/transcribe",
    "rusoto/services/transfer",
    "rusoto/services/translate",
    "rusoto/services/waf",
    "rusoto/services/waf-regional",
    "rusoto/services/workdocs",
    "rusoto/services/worklink",
    "rusoto/services/workmail",
    "rusoto/services/workspaces",
    "rusoto/services/xray",
]

exclude = [
    "helpers",
    "integration_tests",
    "service_crategen",
    "skeptical"
]

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
