[workspace]
members = [
    "mock",
    "rusoto/credential_service_mock",
    "rusoto/core",
    "rusoto/credential",
    "rusoto/signature",
    "rusoto/services/accessanalyzer",
    "rusoto/services/acm",
    "rusoto/services/acm-pca",
    "rusoto/services/alexaforbusiness",
    "rusoto/services/amplify",
    "rusoto/services/apigateway",
    "rusoto/services/apigatewaymanagementapi",
    "rusoto/services/apigatewayv2",
    "rusoto/services/appconfig",
    "rusoto/services/application-autoscaling",
    "rusoto/services/application-insights",
    "rusoto/services/appmesh",
    "rusoto/services/appstream",
    "rusoto/services/appsync",
    "rusoto/services/athena",
    "rusoto/services/autoscaling",
    "rusoto/services/autoscaling-plans",
    "rusoto/services/backup",
    "rusoto/services/batch",
    "rusoto/services/budgets",
    "rusoto/services/ce",
    "rusoto/services/chime",
    "rusoto/services/cloud9",
    "rusoto/services/clouddirectory",
    "rusoto/services/cloudformation",
    "rusoto/services/cloudfront",
    "rusoto/services/cloudhsm",
    "rusoto/services/cloudhsmv2",
    "rusoto/services/cloudsearch",
    "rusoto/services/cloudsearchdomain",
    "rusoto/services/cloudtrail",
    "rusoto/services/cloudwatch",
    "rusoto/services/codebuild",
    "rusoto/services/codecommit",
    "rusoto/services/codedeploy",
    "rusoto/services/codeguru-reviewer",
    "rusoto/services/codeguruprofiler",
    "rusoto/services/codepipeline",
    "rusoto/services/codestar",
    "rusoto/services/codestar-connections",
    "rusoto/services/codestar-notifications",
    "rusoto/services/cognito-identity",
    "rusoto/services/cognito-idp",
    "rusoto/services/cognito-sync",
    "rusoto/services/comprehend",
    "rusoto/services/comprehendmedical",
    "rusoto/services/compute-optimizer",
    "rusoto/services/config",
    "rusoto/services/connect",
    "rusoto/services/connectparticipant",
    "rusoto/services/cur",
    "rusoto/services/dataexchange",
    "rusoto/services/datapipeline",
    "rusoto/services/datasync",
    "rusoto/services/dax",
    "rusoto/services/detective",
    "rusoto/services/devicefarm",
    "rusoto/services/directconnect",
    "rusoto/services/discovery",
    "rusoto/services/dlm",
    "rusoto/services/dms",
    "rusoto/services/docdb",
    "rusoto/services/ds",
    "rusoto/services/dynamodb",
    "rusoto/services/dynamodbstreams",
    "rusoto/services/ebs",
    "rusoto/services/ec2",
    "rusoto/services/ec2-instance-connect",
    "rusoto/services/ecr",
    "rusoto/services/ecs",
    "rusoto/services/efs",
    "rusoto/services/eks",
    "rusoto/services/elastic-inference",
    "rusoto/services/elasticache",
    "rusoto/services/elasticbeanstalk",
    "rusoto/services/elastictranscoder",
    "rusoto/services/elb",
    "rusoto/services/elbv2",
    "rusoto/services/emr",
    "rusoto/services/es",
    "rusoto/services/events",
    "rusoto/services/firehose",
    "rusoto/services/fms",
    "rusoto/services/forecast",
    "rusoto/services/forecastquery",
    "rusoto/services/frauddetector",
    "rusoto/services/fsx",
    "rusoto/services/gamelift",
    "rusoto/services/glacier",
    "rusoto/services/globalaccelerator",
    "rusoto/services/glue",
    "rusoto/services/greengrass",
    "rusoto/services/groundstation",
    "rusoto/services/guardduty",
    "rusoto/services/health",
    "rusoto/services/iam",
    "rusoto/services/imagebuilder",
    "rusoto/services/importexport",
    "rusoto/services/inspector",
    "rusoto/services/iot",
    "rusoto/services/iot-data",
    "rusoto/services/iot-jobs-data",
    "rusoto/services/iot1click-devices",
    "rusoto/services/iot1click-projects",
    "rusoto/services/iotanalytics",
    "rusoto/services/iotevents",
    "rusoto/services/iotevents-data",
    "rusoto/services/iotsecuretunneling",
    "rusoto/services/iotthingsgraph",
    "rusoto/services/kafka",
    "rusoto/services/kendra",
    "rusoto/services/kinesis",
    "rusoto/services/kinesis-video-archived-media",
    "rusoto/services/kinesis-video-media",
    "rusoto/services/kinesis-video-signaling",
    "rusoto/services/kinesisanalytics",
    "rusoto/services/kinesisanalyticsv2",
    "rusoto/services/kinesisvideo",
    "rusoto/services/kms",
    "rusoto/services/lakeformation",
    "rusoto/services/lambda",
    "rusoto/services/lex-models",
    "rusoto/services/lex-runtime",
    "rusoto/services/license-manager",
    "rusoto/services/lightsail",
    "rusoto/services/logs",
    "rusoto/services/machinelearning",
    "rusoto/services/managedblockchain",
    "rusoto/services/marketplace-catalog",
    "rusoto/services/marketplace-entitlement",
    "rusoto/services/marketplacecommerceanalytics",
    "rusoto/services/mediaconnect",
    "rusoto/services/mediaconvert",
    "rusoto/services/medialive",
    "rusoto/services/mediapackage",
    "rusoto/services/mediapackage-vod",
    "rusoto/services/mediastore",
    "rusoto/services/mediatailor",
    "rusoto/services/meteringmarketplace",
    "rusoto/services/mgh",
    "rusoto/services/migrationhub-config",
    "rusoto/services/mq",
    "rusoto/services/mturk",
    "rusoto/services/neptune",
    "rusoto/services/networkmanager",
    "rusoto/services/opsworks",
    "rusoto/services/opsworkscm",
    "rusoto/services/organizations",
    "rusoto/services/outposts",
    "rusoto/services/personalize",
    "rusoto/services/personalize-events",
    "rusoto/services/personalize-runtime",
    "rusoto/services/pi",
    "rusoto/services/pinpoint-email",
    "rusoto/services/pinpoint-sms-voice",
    "rusoto/services/polly",
    "rusoto/services/pricing",
    "rusoto/services/qldb",
    "rusoto/services/qldb-session",
    "rusoto/services/quicksight",
    "rusoto/services/ram",
    "rusoto/services/rds",
    "rusoto/services/rds-data",
    "rusoto/services/redshift",
    "rusoto/services/rekognition",
    "rusoto/services/resource-groups",
    "rusoto/services/resourcegroupstaggingapi",
    "rusoto/services/robomaker",
    "rusoto/services/route53",
    "rusoto/services/route53domains",
    "rusoto/services/route53resolver",
    "rusoto/services/s3",
    "rusoto/services/sagemaker",
    "rusoto/services/sagemaker-a2i-runtime",
    "rusoto/services/sagemaker-runtime",
    "rusoto/services/savingsplans",
    "rusoto/services/schemas",
    "rusoto/services/sdb",
    "rusoto/services/secretsmanager",
    "rusoto/services/securityhub",
    "rusoto/services/serverlessrepo",
    "rusoto/services/service-quotas",
    "rusoto/services/servicecatalog",
    "rusoto/services/servicediscovery",
    "rusoto/services/ses",
    "rusoto/services/sesv2",
    "rusoto/services/shield",
    "rusoto/services/signer",
    "rusoto/services/sms",
    "rusoto/services/sms-voice",
    "rusoto/services/snowball",
    "rusoto/services/sns",
    "rusoto/services/sqs",
    "rusoto/services/ssm",
    "rusoto/services/sso",
    "rusoto/services/sso-oidc",
    "rusoto/services/stepfunctions",
    "rusoto/services/storagegateway",
    "rusoto/services/sts",
    "rusoto/services/support",
    "rusoto/services/swf",
    "rusoto/services/textract",
    "rusoto/services/transcribe",
    "rusoto/services/transfer",
    "rusoto/services/translate",
    "rusoto/services/waf",
    "rusoto/services/waf-regional",
    "rusoto/services/workdocs",
    "rusoto/services/workmail",
    "rusoto/services/workmailmessageflow",
    "rusoto/services/workspaces",
    "rusoto/services/xray",
]

exclude = [
    "helpers",
    "integration_tests",
    "service_crategen",
    "skeptical"
]

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
