[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>"]
build = "build.rs"
description = "Code generation library for Rusoto."
license = "MIT"
name = "rusoto_codegen"
repository = "https://github.com/rusoto/rusoto"
version = "0.2.4"

[build-dependencies.serde_codegen]
optional = true
version = "0.7.6"

[dependencies]
Inflector = "0.2.0"
lazy_static = "0.1.16"
regex = "0.1.65"
serde = "0.7.9"
serde_json = "0.7.1"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.serde_codegen]
optional = true
version = "0.7.9"

[dependencies.serde_macros]
optional = true
version = "0.7.9"

[dependencies.syntex]
optional = true
version = "0.33.0"

[features]
default = ["with-syntex"]
nightly-testing = ["clippy", "unstable"]
unstable = ["serde_macros"]
with-syntex = ["serde_codegen", "syntex"]
