[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
description = "Code generation library for Rusoto."
license = "MIT"
name = "rusoto_codegen"
repository = "https://github.com/rusoto/rusoto"
version = "0.8.0"

[dependencies]
Inflector = "0.7.0"
lazy_static = "0.2.1"
regex = "0.2.1"
serde = "0.9.5"
serde_derive = "0.9.5"
serde_json = "0.9.4"
hyper = "0.10.0"

[dependencies.clippy]
optional = true
version = "0.0"

[features]
nightly-testing = ["clippy"]
unstable = []