[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
license = "MIT"
description = "AWS credential tooling"
name = "rusoto_credential"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.2.0"

[dependencies]
chrono = "0.2.25"
hyper = "0.9.12"
regex = "0.1.80"
serde_json = "0.8.3"
