[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>"]
license = "MIT"
name = "rusoto_helpers"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto_helpers"
version = "0.1.0"

[dependencies]

[dependencies.rusoto]
path = ".."
version = ">= 0.13.1"

[dev-dependencies]
time = "0.1.34"
env_logger = "^0.4.0"
log = "^0.3.3"

[features]
all = ["dynamodb", "kms", "sqs", "logs"]
dynamodb = ["rusoto/dynamodb"]
kms = ["rusoto/kms"]
sqs = ["rusoto/sqs"]
logs = ["rusoto/logs"]
