[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>"]
license = "MIT"
name = "rusoto_helpers"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto_helpers"
version = "0.1.0"
edition = "2018"

[dependencies]
rusoto_core = { path = "../rusoto/core" }
rusoto_dynamodb = { path = "../rusoto/services/dynamodb", optional = true }
rusoto_kms = { path = "../rusoto/services/kms", optional = true }
rusoto_sqs = { path = "../rusoto/services/sqs", optional = true }

[dev-dependencies]
time = "0.2"
env_logger = "0.7"
log = "0.4"

[features]
all = ["dynamodb", "kms", "sqs"]
dynamodb = ["rusoto_dynamodb"]
kms = ["rusoto_kms"]
sqs = ["rusoto_sqs"]
